--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,15 +22,16 @@
             android:layout_height="wrap_content"
             android:text="Dots and Boxes"
             android:textColor="@color/white"
-            android:textSize="48sp"/>
+            android:textSize="48sp" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/startButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start"
             android:layout_below="@id/title"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"/>
+            android:layout_marginTop="25dp"
+            android:text="Start" />
 
     </RelativeLayout>
 
