--- a/app/src/main/res/layout/setup_page.xml
+++ b/app/src/main/res/layout/setup_page.xml
@@ -7,9 +7,9 @@
 
     <TextView
         android:id="@+id/Board_size"
-        android:layout_width="0dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="64dp"
+        android:layout_width="122dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="44dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/Board_Size"
         android:textSize="24sp"
@@ -28,7 +28,7 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.211"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.267" />
@@ -41,10 +41,10 @@
         android:entries="@array/boardSize_list"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.707"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/Board_size"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.118" />
+        app:layout_constraintVertical_bias="0.12" />
 
     <Spinner
         android:id="@+id/players_list"
@@ -54,23 +54,10 @@
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.552"
+        app:layout_constraintHorizontal_bias="0.759"
         app:layout_constraintStart_toEndOf="@+id/Players"
         app:layout_constraintTop_toBottomOf="@+id/boardSize_list"
-        app:layout_constraintVertical_bias="0.104" />
-
-    <Button
-        android:id="@+id/help_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="?"
-        app:backgroundTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.955"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.102" />
 
     <EditText
         android:id="@+id/Name_text3"
@@ -114,7 +101,7 @@
         android:layout_height="wrap_content"
         android:autofillHints="Name"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="@string/name2"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/Name_text3"
@@ -133,7 +120,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:hint="@string/name"
+        android:hint="@string/name1"
         app:layout_constraintBottom_toTopOf="@+id/Name2_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.238"
@@ -142,5 +129,85 @@
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="DuplicateSpeakableTextCheck"
         android:autofillHints="" />
+
+    <Button
+        android:id="@+id/color_button1"
+        android:layout_width="57dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="40dp"
+        app:backgroundTint="#FF0000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.964"
+        app:layout_constraintStart_toEndOf="@+id/Name1_text"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.395"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/color_button2"
+        android:layout_width="57dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="24dp"
+        app:backgroundTint="#00FF00"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintStart_toEndOf="@+id/Name2_text"
+        app:layout_constraintTop_toBottomOf="@+id/color_button1"
+        app:layout_constraintVertical_bias="0.005"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/color_button3"
+        android:layout_width="57dp"
+        android:layout_height="48dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.553"
+        app:layout_constraintStart_toEndOf="@+id/Name_text3"
+        app:layout_constraintTop_toBottomOf="@+id/color_button2"
+        app:layout_constraintVertical_bias="0.119" />
+
+    <Button
+        android:id="@+id/color_button4"
+        android:layout_width="57dp"
+        android:layout_height="48dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.556"
+        app:layout_constraintStart_toEndOf="@+id/Name4_text"
+        app:layout_constraintTop_toBottomOf="@+id/color_button3"
+        app:layout_constraintVertical_bias="0.124" />
+
+    <Button
+        android:id="@+id/start_game_button"
+        android:layout_width="126dp"
+        android:layout_height="55dp"
+        android:text="@string/start"
+        app:backgroundTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.905" />
+
+    <ImageButton
+        android:id="@+id/help_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/help"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.955"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023"
+        app:srcCompat="@drawable/help_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
