--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Help"
+            android:text="Home"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="36sp"
@@ -76,6 +76,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/playButton"
             android:background="@drawable/round"
+            android:backgroundTint="@color/white"
             android:layout_width="184dp"
             android:layout_height="50dp"
             android:layout_below="@id/title"
