Set Up Page + Color Picker

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header">
-
-    </RelativeLayout>
+        app:layout_constraintTop_toBottomOf="@id/header"/>
     <RelativeLayout
         android:layout_width="330dp"
         android:layout_height="520dp"
