--- a/app/src/main/res/layout/activity_board4x4.xml
+++ b/app/src/main/res/layout/activity_board4x4.xml
@@ -31,7 +31,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"/>
         <TextView
-            android:id="@+id/Player3NameName"
+            android:id="@+id/Player3Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Player 3"
