--- a/app/src/main/res/layout/activity_board4x4.xml
+++ b/app/src/main/res/layout/activity_board4x4.xml
@@ -7,19 +7,30 @@
     tools:context=".Board_4x4">
     <RelativeLayout
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="12dp"
+        android:layout_margin="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="350dp"
-        android:layout_height="48dp">
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
         <TextView
             android:id="@+id/Player1Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Player1"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
+        <TextView
+            android:id="@+id/Player1Score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/Player1Name"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:text="0"
+            android:layout_marginLeft="10dp"
             android:layout_alignParentTop="true"/>
         <TextView
             android:id="@+id/Player2Name"
@@ -27,8 +38,19 @@
             android:layout_height="wrap_content"
             android:text="Player2"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"/>
+        <TextView
+            android:id="@+id/Player2Score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/Player2Name"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:text="0"
+            android:layout_marginLeft="10dp"
             android:layout_alignParentBottom="true"/>
         <TextView
             android:id="@+id/Player3Name"
@@ -36,18 +58,42 @@
             android:layout_height="wrap_content"
             android:text="Player 3"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"/>
+        <TextView
+            android:id="@+id/Player3Score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/Player3Name"
+            android:layout_alignParentTop="true"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:text="0"
+            android:layout_marginRight="10dp"/>
         <TextView
             android:id="@+id/Player4Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Player 4"
             android:textStyle="bold"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"/>
+        <TextView
+            android:id="@+id/Player4Score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/Player4Name"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:text="0"
+            android:layout_marginRight="10dp"/>
+
+
     </RelativeLayout>
 <RelativeLayout
     app:layout_constraintTop_toTopOf="parent"
