--- a/app/src/main/res/layout/winner_page.xml
+++ b/app/src/main/res/layout/winner_page.xml
@@ -45,7 +45,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connor Wins!"
+        android:text="Justin Wins!"
         android:textSize="40dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score: 6"
+        android:text="Score: 9"
         android:textSize="40dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
