--- a/app/src/main/res/layout/activity_board4x4.xml
+++ b/app/src/main/res/layout/activity_board4x4.xml
@@ -43,6 +43,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_margin="12dp"
@@ -51,6 +52,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/header"
         app:layout_constraintVertical_bias="0.153">
+
         <RelativeLayout
             android:id="@+id/PLayer1Card"
             android:layout_width="wrap_content"
@@ -85,10 +87,10 @@
             android:id="@+id/Player2Card"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/PLayer1Card"
-            android:background="@drawable/default_player_card"
-            android:layout_marginTop="10dp">
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/default_player_card">
 
             <TextView
                 android:id="@+id/Player2Name"
@@ -117,9 +119,10 @@
             android:id="@+id/Player3Card"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_toRightOf="@id/PLayer1Card"
             android:layout_marginLeft="100dp"
+            android:layout_toRightOf="@id/PLayer1Card"
             android:background="@drawable/default_player_card">
+
             <TextView
                 android:id="@+id/Player3Name"
                 android:layout_width="wrap_content"
@@ -147,32 +150,33 @@
             android:id="@+id/Player4Card"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_toRightOf="@id/Player2Card"
+            android:layout_below="@id/Player3Card"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="10dp"
-            android:layout_below="@id/Player3Card"
+            android:layout_toRightOf="@id/Player2Card"
             android:background="@drawable/default_player_card">
-                <TextView
-                    android:id="@+id/Player4Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:text="Player 4"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/Player4Score"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_toLeftOf="@id/Player4Name"
-                    android:text="0"
-                    android:textColor="@color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/Player4Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:text="Player 4"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/Player4Score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@id/Player4Name"
+                android:text="0"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
 
@@ -917,6 +921,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/snackbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
