Pause Button, Start button reformatted, home and help button fixed on 4x4 screen, etc.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,8 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/rounded"
             android:fontFamily="@font/open_sans"
-            android:text="play"
+            android:text="Play"
+            android:textAllCaps="false"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold" />
