--- a/app/src/main/res/layout/game_setup.xml
+++ b/app/src/main/res/layout/game_setup.xml
@@ -1180,10 +1180,14 @@
         <Button
             android:id="@+id/startGameButton"
             android:layout_width="wrap_content"
+            android:background="@drawable/noborder"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
             android:fontFamily="@font/open_sans"
             android:text="@string/startButton"
+            android:textSize="25dp"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
