--- a/app/src/main/res/layout/popupwindow.xml
+++ b/app/src/main/res/layout/popupwindow.xml
@@ -19,9 +19,9 @@
         android:id="@+id/no_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No"
+        android:layout_marginLeft="225dp"
         android:layout_marginTop="100dp"
-        android:layout_marginLeft="225dp"/>
+        android:text="No" />
 
     <Button
         android:id="@+id/yes_button"
